--- a/index.html
+++ b/index.html
@@ -82,21 +82,20 @@
         </div>
     </header>
 
-    <!-- Noticias con estilo oficial -->
-    <section id="noticias" class="bg-light py-4">
-        <div class="container">
-            <div class="alert alert-gobierno rounded-0 border-start-0 border-end-0 mb-0 py-3">
-                <div class="marquee-container">
-                    <div class="marquee-content">
-                        <span class="badge bg-dark me-3">ÚLTIMO:</span>
-                        Ejemplo: Se atendió una fuga de agua en la colonia Centro... | Reporte ciudadano resuelto en 48
-                        hrs en la colonia Reforma...
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
+   <!-- Noticias con estilo oficial -->
+    <section id="noticias" class="bg-light py-4">
+      <div class="container">
+       <div class="alert alert-gobierno rounded-0 border-start-0 border-end-0 mb-0 py-3 d-flex align-items-center overflow-hidden position-relative">
+         <span class="badge bg-dark me-3 flex-shrink-0">ÚLTIMO:</span>
+           <div class="marquee-wrapper flex-grow-1">
+           <div class="marquee-content">
+            Ejemplo: Se atendió una fuga de agua en la colonia Centro... | Reporte ciudadano resuelto en 48 hrs en la colonia Reforma...
+           </div>
+        </div>
+      </div>
+     </div>
+    </section>
     <!-- Reportes - Con las 12 categorías completas -->
     <section id="reportes" class="py-5 bg-white">
         <div class="container">
