--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
             <div id="userDropdownContainer" class="dropdown d-none">
                 <button class="btn btn-dark dropdown-toggle d-flex align-items-center gap-2 px-4 py-2" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); border-radius: 50px;">
                     <i class="bi bi-person-circle"></i>
-                    <span id="nombreUsuario"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end mt-2 sombra-hover" aria-labelledby="userDropdown" style="border-radius: 10px; border: 1px solid #ddd;">
-                    <li><a class="dropdown-item" href="/pages/miCuenta.html"><i class="bi bi-person-fill"></i> Mi cuenta</a></li>
-                    <li><a class="dropdown-item" href="/pages/misReportes.html"><i class="bi bi-file-earmark-text"></i> Mis reportes</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-danger" href="#" id="cerrarSesion"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
-                </ul>
+                 <span id="nombreUsuario"></span>
+                    </button>
+            <ul class="dropdown-menu dropdown-menu-end mt-2 sombra-hover" aria-labelledby="userDropdown" style="border-radius: 10px; border: 1px solid #ddd;">
+                <li><a class="dropdown-item" href="/pages/miCuenta.html"><i class="bi bi-person-fill"></i> Mi cuenta</a></li>
+                <li><a class="dropdown-item" href="/pages/misReportes.html"><i class="bi bi-file-earmark-text"></i> Mis reportes</a></li>
+                <li id="menuReporteSemanal" class="d-none">
+                <a class="dropdown-item" href="/pages/admin.html">
+                <i class="bi bi-file-bar-graph"></i> Reporte Semanal</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item text-danger" href="#" id="cerrarSesion"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
+            </ul>
             </div>
         </div>
     </div>
